spacing fixes

--- a/client/src/components/CardWithThumbnail/CardWithThumbnail.scss
+++ b/client/src/components/CardWithThumbnail/CardWithThumbnail.scss
@@ -38,7 +38,9 @@
     width: 100%;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
+
 @include tablet {
     .cardWithThumbnail {
         width: 90%;
